# mvc_hw4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  controller.h  main.cpp  model.h  primitive.h  real_primitives.h  view.cpp  view.h
.github/workflows/: workflow_hw4.yml
docs/latex/: annotated.tex  class_controller.tex  class_cube.eps  class_cube.tex  class_model.tex  class_primitive.eps  class_primitive.tex  class_prism.tex  class_sphere.eps  class_view.tex  model_8h_source.tex  primitive_8h_source.tex
latex/: class_prism.eps  class_sphere.tex  controller_8h_source.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  view_8h_source.tex
src/: controller.cpp  controller.h  main.cpp  model.cpp  model.h  primitive.h  view.h
